chore: resolve main overflow

--- a/styles/components/main.module.scss
+++ b/styles/components/main.module.scss
@@ -4,6 +4,7 @@
 .main {
 	@include defaultFadeIn;
 	min-height: 100vh;
+	overflow: hidden;
 
 	@media (min-width: 380px) {
 		padding: 1rem;
